--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,5 +5,23 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Hello</h1>
+    {% for post in data%}
+    <div class="card mb-5" style="width: 18rem;">
+        <div class="card-header">
+            {{ post.time }}
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">{{ post.title }}</h5>
+            <p class="card-text">{{ post.text | truncatewords:10 }}</p>
+            <a href="{% url 'post_body_url' %}" class="btn btn-primary">Read</a>
+        </div>
+        <!-- <div class="card-footer text-muted">
+            Tags:
+            {% for tag in post.tags.all %}
+                <a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a>
+            {% endfor %}
+        </div> -->
+    </div>
+    {% endfor %}
+        
 {% endblock %}
