Change parser, templates, at home

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% for post in data%}
-    <div class="card mb-5" style="width: 18rem;">
+    <div class="card mb-5" style="width: 100%; max-width: 40rem;">
         <div class="card-header">
             {{ post.time }}
         </div>
