clon on pythonanywhere

--- a/app/templates/app/data.html
+++ b/app/templates/app/data.html
@@ -6,5 +6,13 @@
 {% endblock %}
 
 {% block content %}
-    {{ text }}
+    <h1>
+        {{ body.title }}
+    </h1>
+    <h3>
+        {{ body.time }}
+    </h3>
+    <p>
+        {{ body.text }}
+    </p>
 {% endblock %}
