--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    {% for post in data%}
+    {% for post in page.object_list %}
     <div class="card mb-5" style="width: 100%; max-width: 40rem;">
         <div class="card-header">
             {{ post.time }}
@@ -13,7 +13,7 @@
         <div class="card-body">
             <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.text | truncatewords:10 }}</p>
-            <a href="{% url 'post_body_url' %}" class="btn btn-primary">Read</a>
+            <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read</a>
         </div>
         <!-- <div class="card-footer text-muted">
             Tags:
@@ -23,5 +23,49 @@
         </div> -->
     </div>
     {% endfor %}
+
+    {% if is_paginator %}
+    <nav aria-label="...">
+        <ul class="pagination">
+          <li class="page-item {% if not prev_url %}disabled{% endif %}">
+            <a class="page-link" href="{{ prev_url }}" tabindex="-1">Previous</a>
+          </li>
+
+          {% for n in page.paginator.page_range %}
+            {% if page.number == n %}
+                <li class="page-item active">
+                    <a class="page-link" href="?page={{ n }}">{{ n }}<span class="sr-only">(current)</span></a>
+                </li>
+            {% elif n > page.number|add:-3 and n < page.number|add:3 %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+                </li>
+
+            {% elif page.number < page.paginator.num_pages|add:-3 and n == page.paginator.num_pages%}
+                <li class="page-item">
+                    <div class="page-link">...</div>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+                </li>
+            {% elif page.number > 1|add:3 and n == 1%}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+            </li>
+            <li class="page-item">
+                <div class="page-link">...</div>
+            </li>
+            {% endif %}
+
+          {% endfor %}
+        
+          <li class="page-item {% if not next_url %}disabled{% endif %}">
+            <a class="page-link" href="{{ next_url }}">Next</a>
+          </li>
+        </ul>
+      </nav>
+      {% endif %}
+
+
         
 {% endblock %}
